Fixed menu layout bug

--- a/public_html/layouts/basic/styles/layout/_Nav.scss
+++ b/public_html/layouts/basic/styles/layout/_Nav.scss
@@ -74,6 +74,9 @@
 	}
 
 	&__item {
+		width: -webkit-fill-available;
+		width: -moz-available;
+
 		a {
 			display: inline-flex;
 			width: 100%;
